feature: 전체 멀티락으로 변경